# aeromated-certificates-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
certificates_backend/: __main__.py  deleter.py
certificates_backend/cert/: cert_gen.py
certificates_backend/db_files/: connect.py  crud.py  models.py  schemas.py
ssl_certs/: yoccer.csr  yoccer.key  yoccer.pem
tests/: test_certificates_backend.py
